[metadata]
name = Flask-Lib
version = 0.2.1
description = Premade Flask tools to speed up development.
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com
url = https://github.com/rrickgauer/Flask-Lib
long_description = file: README.md

[options]
python_requires = >=3.9.12
packages = find:
package_dir = = src
install_requires =
    blinker >= 1.6.2
    certifi >= 2022.12.7
    charset-normalizer >= 3.1.0
    click >= 8.1.3
    colorama >= 0.4.6
    dacite >= 1.8.0
    docopt >= 0.6.2
    Flask >= 2.3.2
    idna >= 3.4
    importlib-metadata >= 6.6.0
    itsdangerous >= 2.1.2
    Jinja2 >= 3.1.2
    MarkupSafe >= 2.1.2
    requests >= 2.30.0
    urllib3 >= 2.0.2
    Werkzeug >= 2.3.3
    yarg >= 0.1.9
    zipp >= 3.15.0

[options.packages.find]
where=src